--- a/practica1.html
+++ b/practica1.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <title>Vista en tiempo real</title>
 <link href="estilo.css" rel="stylesheet" type="text/css">
+	<script src="js/cambiarColor.js"></script>
 </head>
 <body>
 <p class="clase1"><strong>Bienvenidos</strong></p>
