--- a/practica1.html
+++ b/practica1.html
@@ -8,10 +8,12 @@
 	<script src="js/cambiarColor.js"></script>
 </head>
 <body>
-<p class="clase1"><strong>Bienvenidos</strong></p>
-	<center class="clase2 clase1 cla vo valor" style="">a todos</center>
+<p class="clase1"><strong>Bienvenidos todos</strong></p>
+	<center class="clase2 clase1 cla vo valor">
+	  <a href="https://www.google.com.ar" target="_blank" class="clase2">a todos</a>
+	</center>
 
 <p class="nuevo"><em><strong >Ahora si podemos editar todo</strong></em></p>
-<p class="pp" >final de la transmisión</p>
+<p class="pp" ><a href="practica2.html" target="_self">final de la transmisión</a></p>
 </body>
 </html>
