--- a/practica1.html
+++ b/practica1.html
@@ -1,19 +1,53 @@
 <!doctype html>
 <html>
-<head>
-	
-<meta charset="utf-8">
-<title>Vista en tiempo real</title>
-<link href="estilo.css" rel="stylesheet" type="text/css">
-	<script src="js/cambiarColor.js"></script>
-</head>
-<body>
-<p class="clase1"><strong>Bienvenidos todos</strong></p>
-	<center class="clase2 clase1 cla vo valor">
-	  <a href="https://www.google.com.ar" target="_blank" class="clase2">a todos</a>
-	</center>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Vista en tiempo real</title>
+        <link href="estilo.css" rel="stylesheet" type="text/css">
+       <!--<script src="js/cambiarColor.js"></script>-->
+          <link rel="icon" href="favicon.png" type="image/png" />
+          <link href="css/bootstrap-4.4.1.css" rel="stylesheet" type="text/css">
+        <script>
+                //comentario de linea;
+                /*comentario de varias
+                lineas*/
+                alert("hace calor\n mucho calor")</script>
+    <!--      <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />-->
+    </head>
+    <body>
 
-<p class="nuevo"><em><strong >Ahora si podemos editar todo</strong></em></p>
-<p class="pp" ><a href="practica2.html" target="_self">final de la transmisión</a></p>
-</body>
+        <ol type="1" start="1" reversed >
+            <li>primera</li>
+            <li>segunda</li>
+            <li>tercer</li>
+        </ol>
+        <dl>
+            <dt>semana</dt>
+            <dd>consta de 7 días</dd>
+        
+        </dl>
+        <details>
+            <summary> libros</summary>
+            <blockquote>mi lucha</blockquote>
+            <blockquote>tu lucha</blockquote>
+            
+        </details>
+        <h1 title= "saludo">HOLA A TODOS</h1>
+        <a href="mailto:alejandroarielunate@gmail.com?subject=mis dados&body=soy una capo" title= "enviar un imael">email</a>
+        <h3>pendejos</h3>
+        <center title="atiende">los días miércoles y jueves</center>
+        <p class="clase1" title="casa"><strong>Bienvenidos a <br>todos los gays<span translate ="yes" contenteditable="true"> two brothers</span></strong></p>
+        <center class="clase2 clase1 cla vo valor">
+            <a href="https://www.google.com.ar" target="_blank" class="clase2">a todos</a>
+        </center>
+        <p class="nuevo"><em><strong >Ahora si podemos editar todo</strong></em></p>
+        <p class="pp" ><a href="practica2.html" target="_self">final de la transmisión</a></p>
+      <!-- #BeginDate format:En2a -->01-Abr-2024 9:13 PM<!-- #EndDate -->
+        <input type="date" title="fecha de nacimiento">
+        <script src="js/jquery-3.4.1.min.js"></script>
+        <script src="js/popper.min.js"></script>
+        <script src="js/bootstrap-4.4.1.js"></script>
+    </body>
 </html>
