--- a/practica2.html
+++ b/practica2.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-       <a class="navbar-brand" href="#">Navbar</a>
+       <a class="navbar-brand" href="#" name="ariel">Navbar</a>
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
        </button>
@@ -61,6 +61,7 @@
        </div>
        <br>
        <hr>
+ 
        <br>
        <div class="row">
           <div class="col-md-4">
@@ -117,6 +118,7 @@
        </div>
        <br/>
        <br/>
+               <a href="#ariel">volver</a>
        <div class="row">
           <div class=" col-md-4"> Click here to select this<strong> column.</strong> Always place your content within a column. Columns are indicated by a dashed blue line. </div>
           <div class="col-md-4 "> You can <strong>resize a column</strong> using the handle on the right. Drag it to increase or reduce the number of columns.</div>
