--- a/htdocs/practica1.html
+++ b/htdocs/practica1.html
@@ -44,7 +44,7 @@
         </center>
         <p class="nuevo"><em><strong >Ahora si podemos editar todo</strong></em></p>
         <p class="pp" ><a href="practica2.html" target="_self">final de la transmisión</a></p>
-      <!-- #BeginDate format:En2a -->01-Abr-2024 9:13 PM<!-- #EndDate -->
+      <!-- #BeginDate format:En2a -->16-Abr-2024 6:15 AM<!-- #EndDate -->
         <input type="date" title="fecha de nacimiento">
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/popper.min.js"></script>
