--- a/htdocs/practica1.html
+++ b/htdocs/practica1.html
@@ -15,7 +15,7 @@
                 //comentario de linea;
                 /*comentario de varias
                 lineas*/
-                alert("hace calor\n mucho calor")</script>
+                alert("hace calor\n mucho calores")</script>
         
     <!--      <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />-->
     </head>
@@ -47,7 +47,7 @@
         </center>
         <p class="nuevo"><em><strong >Ahora si podemos editar todo</strong></em></p>
         <p class="pp" ><a href="practica2.html" target="_self">final de la transmisión</a></p>
-      <!-- #BeginDate format:En2a -->02-Jun-2024 5:31 PM<!-- #EndDate -->
+      <!-- #BeginDate format:En2a -->15-Jun-2024 2:14 AM<!-- #EndDate -->
         <input type="date" title="fecha de nacimiento">
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/popper.min.js"></script>
