--- a/htdocs/practica1.html
+++ b/htdocs/practica1.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Vista en tiempo real</title>
+        <title>Vista en tiempo reallocal</title>
         <link href="estilo.css" rel="stylesheet" type="text/css">
         
     <!--<script src="js/cambiarColor.js"></script>-->
@@ -47,7 +47,7 @@
         </center>
         <p class="nuevo"><em><strong >Ahora si podemos editar todo</strong></em></p>
         <p class="pp" ><a href="practica2.html" target="_self">final de la transmisión</a></p>
-      <!-- #BeginDate format:En2a -->15-Jun-2024 2:16 AM<!-- #EndDate -->
+      <!-- #BeginDate format:En2a -->15-Jun-2024 2:18 AM<!-- #EndDate -->
         <input type="date" title="fecha de nacimiento">
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/popper.min.js"></script>
